force-app/main/default/src/objects/PJN_Fulfillment_Request__c/PJN_Fulfillment_Request__c.object-meta.xml
<CustomObject>
    <description>This is the object which will allow us to send requests to third-parties like Specialty Pharmacies and Clinical Trainers.</description>
    <label>Fulfillment Request</label>
    <nameField>
        <displayFormat>FR-{00000}</displayFormat>
        <label>Fulfillment Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>