force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Address_Validation__c.field-meta.xml
<CustomField>
    <fullName>MVN_Address_Validation__c</fullName>
    <label>Address Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes - Validated</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No - Not Valid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>