force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Brand__c.field-meta.xml
<CustomField>
    <fullName>MVN_Brand__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Brand</label>
    <length>100</length>
    <type>Text</type>
</CustomField>