force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_BV_Completed__c.field-meta.xml
<CustomField>
    <fullName>MVN_BV_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BV Completed</label>
    <type>Checkbox</type>
</CustomField>