force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Care_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Care_Plan_Id__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Care Plan Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>