force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Caregiver_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>MVN_Caregiver_Address_Line_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Caregiver Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>