force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Caregiver_City__c.field-meta.xml
<CustomField>
    <fullName>MVN_Caregiver_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Caregiver City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>