force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Caregiver_Email_Consent__c.field-meta.xml
<CustomField>
    <fullName>MVN_Caregiver_Email_Consent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Caregiver Email Consent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>