force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Caregiver_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Caregiver_Phone_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Caregiver Phone Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>