force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Claim__c.field-meta.xml
<CustomField>
    <fullName>MVN_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim</label>
    <referenceTo>MVN_Claim__c</referenceTo>
    <relationshipLabel>Fulfillment Requests</relationshipLabel>
    <relationshipName>Fulfillment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>