force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Claim_Date_of_Service__c.field-meta.xml
<CustomField>
    <fullName>MVN_Claim_Date_of_Service__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Date of Service</label>
    <type>Date</type>
</CustomField>