force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Claim_Review_Outcome__c.field-meta.xml
<CustomField>
    <fullName>MVN_Claim_Review_Outcome__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Review Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>