force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Coordinator_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Coordinator_Name__c</fullName>
    <formula>PJN_Care_Plan__r.MVN_Coordinator__r.FirstName &amp; &quot; &quot; &amp; PJN_Care_Plan__r.MVN_Coordinator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordinator Name</label>
    <type>Text</type>
</CustomField>