force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Copay_Assistance_Program__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Assistance_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Copay Assistance Program</label>
    <referenceTo>PJN_Assistance_Program__c</referenceTo>
    <relationshipLabel>Fulfillment Requests</relationshipLabel>
    <relationshipName>Fulfillment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>