force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Copay_Deactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Deactivated_Date__c</fullName>
    <description>Date and time when the membership was deactivated.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Copay Deactivated Date</label>
    <type>DateTime</type>
</CustomField>