force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Copay_Eligibility_Check_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Eligibility_Check_Type__c</fullName>
    <description>The type of eligibility check performed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Copay Eligibility Check Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>