force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Copay_Enrollment_Result_Details__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Enrollment_Result_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Copay Enrollment Result Details</label>
    <type>TextArea</type>
</CustomField>