force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Copay_Is_Activated__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Is_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Membership has been activated.</description>
    <label>Copay Is Activated</label>
    <type>Checkbox</type>
</CustomField>