force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Copay_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Membership is active.</description>
    <label>Copay Is Active</label>
    <type>Checkbox</type>
</CustomField>