force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Copay_Is_Reenrollment__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Is_Reenrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copay Is Reenrollment</label>
    <type>Checkbox</type>
</CustomField>