force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Copay_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Member_Id__c</fullName>
    <description>The unique number a plan assigns to a member.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Copay Member Id</label>
    <length>12</length>
    <type>Text</type>
</CustomField>