force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Copay_PCN__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_PCN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Copay PCN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>