force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Copay_Program_Cap__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Program_Cap__c</fullName>
    <description>Maximum benefit amount.</description>
    <label>Copay Program Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>