force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Copay_Usage_Period__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Usage_Period__c</fullName>
    <description>The value for the relative time period that the membership benefit can be used.</description>
    <label>Copay Usage Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>