force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Fulfillment_Request_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Fulfillment_Request_Status_Formula__c</fullName>
    <description>Displays the text &quot;Cancelled&quot;. Used in the custom Cancel Fulfillment Request action.</description>
    <formula>&quot;Cancelled&quot;</formula>
    <label>Fulfillment Request Status</label>
    <type>Text</type>
</CustomField>