force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_HIPPA_Consent__c.field-meta.xml
<CustomField>
    <fullName>MVN_HIPPA_Consent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HIPAA Consent</label>
    <referenceTo>PJN_Contact_Point_Type_Consent__c</referenceTo>
    <relationshipLabel>Fulfillment Requests (HIPPA Consent)</relationshipLabel>
    <relationshipName>Fulfillment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>