force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_ICD_10_CM_Diagnosis_Code__c.field-meta.xml
<CustomField>
    <fullName>MVN_ICD_10_CM_Diagnosis_Code__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>ICD-10-CM Diagnosis Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>