force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Material_Order_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>MVN_Material_Order_Tracking_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Material Order Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>