force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Member_Plan__c.field-meta.xml
<CustomField>
    <fullName>MVN_Member_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Plan</label>
    <referenceTo>PJN_Member_Plan__c</referenceTo>
    <relationshipLabel>Fulfillment Requests (Member Plan)</relationshipLabel>
    <relationshipName>Fulfillment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>