force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_PAP_Consent__c.field-meta.xml
<CustomField>
    <fullName>MVN_PAP_Consent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAP Consent</label>
    <referenceTo>PJN_Contact_Point_Type_Consent__c</referenceTo>
    <relationshipLabel>Fulfillment Requests (PAP Consent)</relationshipLabel>
    <relationshipName>Fulfillment_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>