force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_PAP_Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>MVN_PAP_Consent_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PAP Consent Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>