force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Patient_Best_Time__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Best_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Best Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>