force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Patient_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Diagnosis__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Patient Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>