force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Patient_Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Preferred_Contact_Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Preferred Contact Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>