force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Physician_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Physician_Phone_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Phone Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>