force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Plan_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plan Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>