force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Practice__c.field-meta.xml
<CustomField>
    <fullName>MVN_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fulfillment Requests (Practice)</relationshipLabel>
    <relationshipName>Fulfillment_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>