force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Practice_Country__c.field-meta.xml
<CustomField>
    <fullName>MVN_Practice_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Practice Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>