force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Practice_Email__c.field-meta.xml
<CustomField>
    <fullName>MVN_Practice_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Practice Email</label>
    <type>Email</type>
</CustomField>