force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Practice_Fax__c.field-meta.xml
<CustomField>
    <fullName>MVN_Practice_Fax__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Practice Fax</label>
    <type>Phone</type>
</CustomField>