force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Practice_NPI__c.field-meta.xml
<CustomField>
    <fullName>MVN_Practice_NPI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Practice NPI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>