force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Practice_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Practice_Tax_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Practice Tax Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>