force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Primary_Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Primary_Coverage_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Coverage Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>