force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Primary_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Primary_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Effective Date</label>
    <type>Date</type>
</CustomField>