force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Primary_Member_Plan__c.field-meta.xml
<CustomField>
    <fullName>MVN_Primary_Member_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a patient&apos;s primary active member plan.</description>
    <label>Primary Member Plan</label>
    <referenceTo>PJN_Member_Plan__c</referenceTo>
    <relationshipLabel>Fulfillment Requests (Primary Member Plan)</relationshipLabel>
    <relationshipName>Fulfillment_Requests_Primary</relationshipName>
    <type>Lookup</type>
</CustomField>