force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Program__c.field-meta.xml
<CustomField>
    <fullName>MVN_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>CareProgram</referenceTo>
    <relationshipLabel>Fulfillment Requests</relationshipLabel>
    <relationshipName>Fulfillment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>