force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Program_Consent__c.field-meta.xml
<CustomField>
    <fullName>MVN_Program_Consent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Consent</label>
    <referenceTo>PJN_Contact_Point_Type_Consent__c</referenceTo>
    <relationshipLabel>Fulfillment Requests (Program Consent)</relationshipLabel>
    <relationshipName>Fulfillment_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>