force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Program_Consent_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Program_Consent_Expiration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program Consent Expiration Date</label>
    <type>Date</type>
</CustomField>