force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Program_Name__c</fullName>
    <formula>PJN_Care_Plan__r.PJN_Program_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Name</label>
    <type>Text</type>
</CustomField>