force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Secondary_Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Secondary_Coverage_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Coverage Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>