force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Secondary_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Secondary_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Effective Date</label>
    <type>Date</type>
</CustomField>