force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Secondary_Member_Plan__c.field-meta.xml
<CustomField>
    <fullName>MVN_Secondary_Member_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a patient&apos;s secondary active member plan.</description>
    <label>Secondary Member Plan</label>
    <referenceTo>PJN_Member_Plan__c</referenceTo>
    <relationshipLabel>Fulfillment Requests (Secondary Member Plan)</relationshipLabel>
    <relationshipName>Fulfillment_Requests_Secondary</relationshipName>
    <type>Lookup</type>
</CustomField>