force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_SP_Patient_Triage_Error__c.field-meta.xml
<CustomField>
    <fullName>MVN_SP_Patient_Triage_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SP Patient Triage Error</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>