force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_SP_Patient_Triage_Status__c.field-meta.xml
<CustomField>
    <fullName>MVN_SP_Patient_Triage_Status__c</fullName>
    <label>SP Patient Triage Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>