force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Tertiary_Member_Plan__c.field-meta.xml
<CustomField>
    <fullName>MVN_Tertiary_Member_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a patient&apos;s tertiary active member plan.</description>
    <label>Tertiary Member Plan</label>
    <referenceTo>PJN_Member_Plan__c</referenceTo>
    <relationshipLabel>Fulfillment Requests (Tertiary Member Plan)</relationshipLabel>
    <relationshipName>Fulfillment_Requests_Tertiary</relationshipName>
    <type>Lookup</type>
</CustomField>