force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/MVN_Tracking_Link__c.field-meta.xml
<CustomField>
    <fullName>MVN_Tracking_Link__c</fullName>
    <formula>IF ( left ( MVN_Material_Order_Tracking_Number__c , 2 ) = &quot;1Z&quot; ,
HYPERLINK(&quot;https://www.ups.com/track?loc=null&amp;tracknum=&quot;&amp;MVN_Material_Order_Tracking_Number__c, &quot;UPS &quot;&amp;MVN_Material_Order_Tracking_Number__c , &quot;_Blank&quot; ) , &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracking Link</label>
    <type>Text</type>
</CustomField>