force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Actual_Duration__c.field-meta.xml
<CustomField>
    <fullName>PJN_Actual_Duration__c</fullName>
    <description>ACTUAL_DURATION (Ashfield response mapping) ,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Duration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>