force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Best_Time__c.field-meta.xml
<CustomField>
    <fullName>PJN_Best_Time__c</fullName>
    <description>Best Time from Patient&apos;s Primary Phone Contact Information --&gt; PATIENT_BEST_TIME_TO_CALL,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Best Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>