force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Caregiver__c.field-meta.xml
<CustomField>
    <fullName>PJN_Caregiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to the caregiver account related to the patient&apos;s care plan.</description>
    <label>Caregiver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Caregiver</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fulfillment Requests (Caregiver)</relationshipLabel>
    <relationshipName>Fulfillment_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>