force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Caregiver_First_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Caregiver_First_Name__c</fullName>
    <description>Text field used to stamp the first name of the caregiver related to a patient&apos;s care plan.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Caregiver First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>