force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Caregiver_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Caregiver_Middle_Name__c</fullName>
    <description>Middle Name from Care Plan&apos;s Caregiver Account --&gt; CAREGIVER_MIDDLE_INITIAL,</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Caregiver Middle Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>