force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Caregiver_Present__c.field-meta.xml
<CustomField>
    <fullName>PJN_Caregiver_Present__c</fullName>
    <description>CAREGIVER_PRESENT (Ashfield response mapping),</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Caregiver Present</label>
    <length>20</length>
    <type>Text</type>
</CustomField>