force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Caregiver_Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>PJN_Caregiver_Primary_Email__c</fullName>
    <description>Email Address from Care Plan&apos;s Caregiver Account&apos;s Primary Email Contact Information --&gt; CAREGIVER_EMAIL_ADDRESS,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Caregiver Primary Email</label>
    <type>Email</type>
</CustomField>