force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Caregiver_Primary_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Caregiver_Primary_Phone_Number__c</fullName>
    <description>- Phone Number from Care Plan&apos;s Caregiver Account&apos;s Primary Phone Contact Information --&gt; CAREGIVER_PHONE_NUMBER,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Caregiver Primary Phone Number</label>
    <type>Phone</type>
</CustomField>