force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_Caregiver_Relationship__c.field-meta.xml
<CustomField>
    <fullName>PJN_Caregiver_Relationship__c</fullName>
    <description>Caregiver Relationship from Care Plan --&gt; CAREGIVER_RELATIONSHIP_TYPE,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Caregiver Relationship</label>
    <length>100</length>
    <type>Text</type>
</CustomField>