force-app/main/default/src/objects/PJN_Fulfillment_Request__c/fields/PJN_CM_Email__c.field-meta.xml
<CustomField>
    <fullName>PJN_CM_Email__c</fullName>
    <description>Email from Care Plan&apos;s Case Manager&apos;s User Account --&gt; CASE_MANAGER_EMAIL_ADDRESS,</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CM Email</label>
    <type>Email</type>
</CustomField>